# nidx

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  release.toml
.github/workflows/: ci.yml  release.yml
benches/: decode.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/nidx/: __init__.py
bindings/python/src/: lib.rs
bindings/python/tests/: test_nidx.py
bindings/wasm/: Cargo.toml  README.md  package.json  release.toml
bindings/wasm/src/: lib.rs
bindings/wasm/tests/: web.rs
examples/: check.rs
src/: date.rs  lib.rs  types.rs
src/country/: albania.rs  kosovo.rs  mod.rs
tests/: integration.rs  proptests.rs  serde.rs
