[package]
name = "nidx-wasm"
version = "0.2.1"
edition = "2024"
description = "Validate and decode national ID numbers — extract structured data from government-issued personal IDs"
license = "MIT"
repository = "https://github.com/dedal-io/nidx"
homepage = "https://github.com/dedal-io/nidx"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nidx = { path = "../.." }
js-sys = "0.3"
wasm-bindgen = "=0.2.113"

[dev-dependencies]
wasm-bindgen-test = "0.3"
